<resources>
    <string name="app_name">assignment-3</string>
    <string name="enter_android_code_name">Enter Android Code Name</string>
    <string name="enter_android_version">Enter Android Version</string>
    <string name="add">Add</string>
    <string name="android_code">Android Code</string>
    <string name="android_10">Android 10</string>
    <string name="quartz_unofficial">Quartz (Unofficial)</string>
    <string name="android_11">Android 11</string>
    <string name="red_velvet_cake_unofficial">Red Velvet Cake (Unofficial)</string>
    <string name="android_12">Android 12</string>
    <string name="ice_cream">Ice Cream</string>
</resources>